- Added ???
- Hel Vanguard
	- Defense changed from damper to shields
- Hel Dominator
	- Armor 800 -> 700
- Hel Scaith
	- Hel Razer damage 4000 -> 5000
- Legio Rising
	- Updated fleet composition with new Daemons
	- Now has more Daemons when scaled up to higher FP
- Kodai
	- New sprite
	- Removed mining pods
	- Armor 800 -> 900
	- Mining Lance efficiency 1.3ish -> 1.0
- Hel Plating/Carapace
	- Added an additional flat 100 armor for calculation
	- Plating now reduces armor to 1/pi
	- Regeneration is now disrupted for 2s after taking armor damage
- Nelson
	- small missiles changed to composite
	- built-ins of XIV variant changed from sabot to atropos tubes
- Balor/Tethra
	- New sprites
	- New VFX
- Skola
	- New sprite
- Renki
	- Small hardpoints energy -> synergy
- Kupferflug Regalia wing
	- Increased wing size from 2 to 3
	- OP 15 -> 18
- Miasma drone
	- Weapon renamed to Hel Pulser
	- Damage/shot 50 -> 40
	- Chargeup 0.33333 -> 0.2
- Bungalow
	- New sprite
- Doominator
	- Speed 40 -> 60
	- Dissipation 500 -> 700
	- No longer spawns in regular fleets
- Nelson
	- Armor 1200 -> 1100
	- System cooldown 5s -> 8s
- Poltergeist
	- Flux capacity 9000 -> 10000
- Other minor sprite updates
- Daemons
	- Moved high maintenance effect to Daemon Core Hullmod
- Lucifron
	- Added Fortress Inferna structure
	- Analogous to Lion's Guard HQ
- Legio Infernalis faction
	- Slightly increased daemon spawnrate in regular fleets
	- Reworked relations
		- No longer hostile to most factions
		- Increased likelihood for negative diplomacy events
		- Even further increased after Daemon upgrade
		- This should lead to a hopefully less polarising Legio behaviour while retaining their general
		  hostile nature.
		- Now goes hostile to player faction and player Commissioned faction on Daemon upgrade
- Updated updated tahlan_settings file to clarify which toggles can be changed mid-campaign



0.8.5
- Dun Scaith
	- DP lowered from 55 to 50
- Hel Scaith
	- DP lowered from 70 to 65