@@ -44,5 +44,5 @@ Induction Ammo Feeders,tahlan_fluxfeeder,1,,,,,,,,,1,3,1,10,,,,,,,,,,,,,graphics
 Wrath of the Machine,tahlan_machinespirit,1,,,,,,,,,1,3,1,10,,,,,,,,,,,,,graphics/icons/hullsys/ammo_feeder.png
 Hel-type Temporal Shell,tahlan_heltempshell,1,,,,,0.2,,,,3,15,2,15,,,,,,,,,,,,,graphics/icons/hullsys/temporal_shell.png
 Slip Drive,tahlan_slipdrive,,,,,,0.05,,3,0.15,0.1,0.35,0,0.4,,TRUE,,TRUE,TRUE,,,,TRUE,,,,graphics/icons/hullsys/displacer.png
-Phase Breaker,tahlan_phasebreaker,,,,,,0.1,,2,0.04,0.25,5,0.25,1,,,,TRUE,,,,,,TRUE,,,graphics/icons/hullsys/phase_cloak.png
+Phase Breaker,tahlan_phasebreaker,,,,,,0.1,,2,0.03,0.25,5,0.25,1,,,,TRUE,,,,,,TRUE,,,graphics/icons/hullsys/phase_cloak.png
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,
