@@ -71,6 +71,7 @@
 		"halved": "halved",
 		"pi": "Pi",
 		"heavyarmor": "Heavy Armor",
-		"phaseBreaker": "Phase Breaker"
+		"phaseBreaker": "Phase Breaker",
+		"daemonPlatingSmod": "When built-in, armor rating penalty is reduced to %s, but regeneration is also reduced to %s per second."
 	}
 }
